--- a/src/editor.html
+++ b/src/editor.html
@@ -1,11 +1,10 @@
 <div style="display: flex; flex-direction: column; align-items: stretch; height:100vh; background-color: var(--sl-color-neutral-200)">
-    <div style="display: flex; flex-direction: row; justify-content: center; height: 3em;" class="candy-card site-texture candy-texture-striped">
+    <div id="header" class="candy-card site-texture candy-texture-striped">
+        <div id="vim-statusbar" class="candy-code"></div>
         <div id="room"></div>
-        <button class="candy-button candy-primary">button that doesn't do anything</button>
     </div>
 
     <div style="flex-grow:2">
         <div style="height: 100%; width: 100%;" id="monaco"></div>
     </div>
-    <div id="vim-statusbar" style="height: 1em;"></div>
 </div>
