change candy theme, add link to repo

--- a/src/docIndex.html
+++ b/src/docIndex.html
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: column; align-items: stretch; height:100vh; background-color: var(--sl-color-neutral-200)">
     <div style="display: flex; flex-direction: row; justify-content: center; padding: 0.5em">
-        <div>multiplayer notepad</div>
+        <div class="candy-prose"><b>multiplayer notepad</b> by viv (<a href="https://github.com/vivlim/multiplayer-notepad/">github repo</a>)</div>
     </div>
     <div style="display: flex; flex-direction: row; justify-content: center; padding: 0.5em;">
         <button class="candy-button candy-primary" id="newDocButton">new</button>
